@@ -30,6 +30,7 @@ import de.neemann.digital.draw.library.GenericInitCode;
 import de.neemann.digital.draw.model.InverterConfig;
 import de.neemann.digital.draw.shapes.CustomCircuitShapeType;
 import de.neemann.digital.draw.shapes.Drawable;
+import de.neemann.digital.draw.shapes.Shape;
 import de.neemann.digital.draw.shapes.ShapeFactory;
 import de.neemann.digital.draw.shapes.custom.CustomShapeDescription;
 import de.neemann.digital.gui.components.TransformHolder;
@@ -831,6 +832,37 @@ public class Circuit implements Copyable<Circuit> {
             }
         }
         return new ObservableValues(pinList);
+    }
+
+    /**
+     * Returns a list of elements that matches the given string.
+     * Searches in labels, descriptions, pin numbers and pin labels.
+     *
+     * @param search the string to search for
+     * @return the matching elements
+     */
+    public ArrayList<VisualElement> findElements(String search) {
+        search = search.toLowerCase();
+        ArrayList<VisualElement> found = new ArrayList<>();
+        for (VisualElement ve : visualElements) {
+            ElementAttributes attr = ve.getElementAttributes();
+            boolean match = (attr.getLabel().toLowerCase().contains(search))
+                    || (attr.get(Keys.DESCRIPTION).toLowerCase().contains(search))
+                    || (attr.get(Keys.NETNAME).toLowerCase().contains(search))
+                    || (attr.get(Keys.PINNUMBER).toLowerCase().contains(search));
+
+            if (!match) {
+                Shape shape = ve.getShape();
+                for (Pin p : shape.getPins())
+                    if (p.getName().toLowerCase().contains(search)) {
+                        match = true;
+                        break;
+                    }
+            }
+            if (match)
+                found.add(ve);
+        }
+        return found;
     }
 
     /**
