@@ -910,6 +910,18 @@ public final class Main extends JFrame implements ClosingWindowListener.ConfirmS
         ToolTipAction createTestCaseAction = new CreateTestCaseAction(Lang.get("menu_createBehavioralFixture"))
                 .setToolTip(Lang.get("menu_createBehavioralFixture_tt"));
 
+        ToolTipAction find = new ToolTipAction(Lang.get("menu_find")) {
+            @Override
+            public void actionPerformed(ActionEvent actionEvent) {
+                String search = showInputDialog(Lang.get("menu_find"));
+                if (search != null && !search.isEmpty()) {
+                    ArrayList<VisualElement> found = getCircuitComponent().getCircuit().findElements(search);
+                    getCircuitComponent().removeHighLighted();
+                    getCircuitComponent().addHighLighted(found);
+                }
+            }
+        }.setAcceleratorCTRLplus('F').enableAcceleratorIn(getCircuitComponent()).setToolTip(Lang.get("menu_find_tt"));
+
         edit.add(circuitComponent.getUndoAction().createJMenuItemNoIcon());
         edit.add(circuitComponent.getRedoAction().createJMenuItemNoIcon());
         edit.addSeparator();
@@ -931,6 +943,7 @@ public final class Main extends JFrame implements ClosingWindowListener.ConfirmS
         edit.add(circuitComponent.getPasteAction().createJMenuItem());
         edit.add(circuitComponent.getRotateAction().createJMenuItem());
         edit.add(insertAsNew.createJMenuItem());
+        edit.add(find.createJMenuItem());
         edit.addSeparator();
         edit.add(editSettings.createJMenuItem());
     }
