@@ -1,7 +1,8 @@
 Release Notes
 
 HEAD, planned as v0.30
-- Adds a presentation mode.
+- Added a search function
+- Added a presentation mode.
 - The remote server is now disabled by default.
   It must be enabled in the settings.
 
